Se mejoro el header con su  resposive

--- a/style.css
+++ b/style.css
@@ -1,71 +1,180 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Raleway&family=Ubuntu&display=swap');
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+    outline: none;
 }
 :root {
-    --blanco: #fff;
-    --negro: #222;
-    --color1: #f81;
-    --color2: #a9f;
-    --color3: #f8d;
+	--blanco: #fff;
+	--negro: #222;
+	--color1: #000000;
+	--color2: #3D0000;
+	--color3: #950101;
+	--color4: #FF0000;
 }
-.grid__container {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 80px 50vh 100% 10%;
-    grid-template-areas: 
-    "header header"
-    "main main"
-    "section aside"
-    "footer footer";
-}
-header {
-    grid-area: header;
-    background-color: cornflowerblue;
-}
-.U__icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    background-color: var(--color1);
-    height: 30px;
-    width: 30px;
-    margin: .3rem;
-}
-.logo {
-    display: flex;
-}
-main {
-    grid-area: main;
-    background-color: red;
-}
-section {
-    grid-area: section;
-    background-color: lime;
-}
-aside {
-    grid-area: aside;
-    background-color: crimson;
-}
-footer {
-    grid-area: footer;
-    background-color: gray;
-}
-@media (max-width:768px) {
-    .grid__container {
-        display: grid;
-        gap: 10px;
-        grid-template-columns: 1fr;
-        grid-template-rows: 80px 50vh 100% 100% 10%;
-        grid-template-areas: 
-        "header header"
-        "main main"
-        "section section"
-        "aside aside"
-        "footer footer";
+@media (prefers-color-scheme: dark){
+    :root {
+        --blanco: #222;
+        --negro: #dfdfdf;
+        --color1: #420516;
+        --color2: #7D1935;
+        --color3: #B42B51;
+        --color4: #E63E6D;
     }
 }
+.grid__container {
+	display: grid;
+	grid-template-columns: 3fr 1fr;
+	grid-template-rows: 80px 50vh 100% 10%;
+	grid-template-areas:
+		'header header'
+		'main main'
+		'section aside'
+		'footer footer';
+}
+header {
+	grid-area: header;
+	background-color: var(--blanco);
+    width: 100%;
+    height: 80px;
+    position: fixed;
+    top: 0; left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+/*Nav*/
+.nav {
+    margin-right: 1em;
+    font-family: 'Raleway';
+}
+.ul__items {
+    display: inline-block;
+    list-style: none;
+}
+.a_item {
+    padding: .3rem;
+    color: var(--negro);
+    text-decoration: none;
+    border: 2px solid var(--color4);
+    border-radius: 3px;
+}
+.a_item {
+    line-height: 10px;
+    padding: 6px 8px;
+    transition: .2s ease;
+}
+.a_item:hover {
+    background-color: var(--color4);
+}
+.toggle {
+    color: var(--negro);
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    display: none;
+    margin-left: .5em;
+}
+/*Cierre*/
+.logo {
+    display: flex;
+    margin-left: .5em;
+}
+.logo h1 {
+    color: var(--negro);
+    font-size: 1.4rem;
+}
+.U__icon {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: var(--negro);
+	background-color: var(--color4);
+	height: 30px;
+	width: 30px;
+	margin: 0.3rem;
+}
+header h2 {
+    color: var(--negro);
+    font-size: 1.6rem;
+    font-family: 'Raleway';
+    text-transform: uppercase;
+    font-weight: 600;
+}
+main {
+	grid-area: main;
+	background-color: var(--color1);
+}
+section {
+	grid-area: section;
+	background-color: var(--color2);
+}
+aside {
+	grid-area: aside;
+	background-color: var(--color3);
+}
+footer {
+	grid-area: footer;
+	background-color: var(--color4);
+}
+@media (max-width: 768px) {
+	.grid__container {
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-template-rows: 60px 50vh 100% 100% 10%;
+		grid-template-areas:
+			'header header'
+			'main main'
+			'section section'
+			'aside aside'
+			'footer footer';
+        }
+        header {
+            height: 60px;
+        }
+        .nav__ul {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            list-style: none;
+            background-color: var(--color4);
+            position: fixed;
+            left: 0;
+            top: 60px;
+            width: 100%;
+            padding: .3rem 0px;
+            height: calc(100% - 60px);
+            overflow-y: auto;
+            left: -100%;
+            transition: left .3s ease-in;
+        }
+        .ul__items {
+            line-height: 80px;
+        }
+        .a_item {
+            padding: .3rem;
+            color: var(--negro);
+            text-decoration: none;
+            border: transparent;
+        }
+        .a_item {
+            line-height: 10px;
+            padding: 6px 8px;
+            transition: .2s ease;
+        }
+        .a_item:hover,
+        .a_item:active,     
+        .a_item:focus {
+            background-color: var(--blanco );
+        }
+        .toggle {
+            display: inline-block;
+            margin-right: 1rem;
+            cursor: pointer;
+        }
+        .nav__ul--visible {
+            left: 0;
+        }
+}
+
